# dashbook

./: Cargo.toml  api.md  shell.nix
.github/workflows/: codeql.yml
src/: cache.rs  config.rs  error.rs  live.rs  main.rs
src/api/: addresses.rs  blocks.rs  events.rs  governance.rs  insight.rs  masternodes.rs  mod.rs  network.rs  search.rs  transactions.rs
src/models/: address.rs  block.rs  governance.rs  masternode.rs  mod.rs  network.rs  transaction.rs
src/rpc/: addresses.rs  blocks.rs  client.rs  governance.rs  masternodes.rs  mod.rs  network.rs  quorums.rs  transactions.rs  types.rs
static/: index.html
static/css/: components.css  main.css  pages.css
static/js/: api.js  app.js  components.js  live.js  router.js
static/js/pages/: address.js  block-detail.js  blocks.js  dashboard.js  governance.js  masternode.js  masternodes.js  mempool.js  network.js  transaction.js
